# pizza-price-by-diameter

./: README.md  pyproject.toml
tests/: app.py  pizza.csv  testes.ipynb
